fixed navbar overlapping scrollbar + added lots of timeline changes and changed the timeline color

--- a/assets/stylesheets/base.less
+++ b/assets/stylesheets/base.less
@@ -28,9 +28,10 @@ body {
 html, body {
   width: 100%;
     height: 100%;
-    margin: 0px;
+    margin: 44px 0;
     padding: 0px;
     overflow-x: hidden; 
+
 }
 a {
     /*cursor: url("../images/eyeballinvert.png"), auto !important;*/
