--- a/assets/stylesheets/site.less
+++ b/assets/stylesheets/site.less
@@ -111,32 +111,24 @@ ul {
 }
 
 .turtletimecapsule-page { 
-  h2 {
-    
-  }
+ background: #FFFAFA;
   hr {
     border-color: black;
   }
-  /*background: url("../images/spaceship.jpg") no-repeat center center fixed; */
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-repeat: repeat;
-  background-color: #F8ECC2;
-  background-position: center;
+  
   h1, h2, p, h3 {
     color: #383b3e !important;
   }
   p {
     font-family: Open Sans;
+    text-align: justify;
   }
   height: 100%;
   .navbar .navbar-nav > li > a {
     color: #383b3e !important;
   }
   .navbar {
-    background-color: #F8ECC2;
+    background-color: #FFFAFA;
     .navbar-brand {
       color: #383b3e;
     }
